--- a/package.json
+++ b/package.json
@@ -14,10 +14,36 @@
     "url": "https://github.com/Automattic/_s/issues"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^12.1.0",
     "dir-archiver": "^1.1.1",
-    "node-sass": "^4.14.1",
-    "rtlcss": "^2.5.0"
+    "rtlcss": "^2.5.0",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@wordpress/babel-preset-default": "^6.3.1",
+    "@wordpress/eslint-plugin": "^9.0.5",
+    "@wordpress/scripts": "^17.1.0",
+    "@wordpress/stylelint-config": "^19.0.4",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "cssnano": "^5.0.6",
+    "eslint": "^7.27.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-jsdoc": "^35.0.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss": "^8.2.13",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
   },
   "rtlcssConfig": {
     "options": {
@@ -33,12 +59,9 @@
     "map": false
   },
   "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
-    "compile:rtl": "rtlcss style.css style-rtl.css",
-    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
-    "lint:js": "wp-scripts lint-js 'js/*.js'",
-    "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
+    "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
+    "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
+    "start:wp-scripts": "wp-scripts start"
   },
   "main": "index.js"
 }
